--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "morgan": "^1.10.0",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
+    "require": "^2.4.20",
     "sequelize": "^6.24.0"
   },
   "devDependencies": {
+    "dotenv": "^16.0.3",
     "nodemon": "^2.0.20"
   }
 }
