--- a/.env
+++ b/.env
@@ -7,3 +7,7 @@ DB_USER = 'postgres'
 DB_PASS = 'postgres'
 DB_HOST = 'localhost'
 DB_DIALECT = 'postgres'
+
+AUTH_SECRET = 'F2yWGBT1#2ZlWvM02pT@^aidinOp'
+AUTH_EXPIRE = '7d'
+AUTH_ROUNDS = '10'
